Weer nieuwe stufffff

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,11 +93,11 @@
                     <div id="dropdown3" aria-expanded="true" class="custom-dropdown collapse in">
                         <div class="small-form-group form-group" style="float: left">
                             <label for="InputPastHistory">Past History</label>
-                            <input type="number" min="1" class="form-control" id="InputPastHistory" disabled>
+                            <input type="number" min="2" class="form-control" id="InputPastHistory" disabled>
                         </div>
                         <div class="small-form-group form-group" style="float: right">
                             <label for="InputFutureTarget">Future Target</label>
-                            <input type="number" min="1" class="form-control" id="InputFutureTarget" disabled>
+                            <input type="number" min="2" class="form-control" id="InputFutureTarget" disabled>
                         </div>
                         <div class="small-form-group form-group" style="float: left">
                             <label for="InputStepSize">Step Size</label>
@@ -105,7 +105,11 @@
                         </div>
                         <div class="small-form-group form-group" style="float: right">
                             <label for="InputViewHistory">View History</label>
-                            <input type="number" min="1" class="form-control" id="InputViewHistory" disabled>
+                            <input type="number" min="2" class="form-control" id="InputViewHistory" disabled>
+                        </div>
+                        <div class="small-form-group form-group" style="float: left; width: 100%">
+                            <label for="InputClusterHistory">Cluster History</label>
+                            <input type="number" min="2" class="form-control" id="InputClusterHistory" disabled>
                         </div>
                         <button class="btn btn-primary" id="ResetButton" disabled>Reset
                         </button>
